errors.err
ex12.c: In function ‘main’:
ex12.c:82:5: error: too few arguments to function ‘gerar_imagem’
     gerar_imagem();
     ^
ex12.c:55:6: note: declared here
 void gerar_imagem(transicoes *p_transicoes);
      ^
ex12.c: In function ‘gerar_imagem’:
ex12.c:268:5: warning: implicit declaration of function ‘desenha_estdos’ [-Wimplicit-function-declaration]
     desenha_estdos(buff);
     ^
ex12.c: At top level:
ex12.c:309:1: error: expected identifier or ‘(’ before ‘{’ token
 {
 ^
ex12.c:331:1: error: expected identifier or ‘(’ before ‘{’ token
 {
 ^
ex12.c:372:1: error: expected identifier or ‘(’ before ‘{’ token
 {
 ^
